--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
+# Core dependencies
 aiohappyeyeballs==2.6.1
-aiohttp==3.11.16
+aiohttp==3.9.5
 aiohttp-retry==2.9.1
 aiosignal==1.3.2
 amqp==5.3.1
@@ -11,7 +12,7 @@ asyncssh==2.20.0
 atpublic==5.1
 attrs==25.3.0
 billiard==4.2.1
-celery==5.5.1
+celery==5.3.4
 certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
@@ -56,11 +57,11 @@ markdown-it-py==3.0.0
 mdurl==0.1.2
 multidict==6.4.3
 networkx==3.4.2
-numpy==2.2.4
+numpy==2.0.2
 omegaconf==2.3.0
 orjson==3.10.16
 packaging==24.2
-pandas==2.2.3
+pandas==2.1.4
 pathspec==0.12.1
 platformdirs==4.3.7
 prompt_toolkit==3.0.51
@@ -76,13 +77,12 @@ pygtrie==2.5.0
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 pytz==2025.2
-pywin32==310
 PyYAML==6.0.2
 requests==2.32.3
 rich==14.0.0
 ruamel.yaml==0.18.10
 scikit-learn==1.6.1
-scipy==1.15.2
+scipy==1.11.4
 scmrepo==3.3.10
 semver==3.0.4
 setuptools==78.1.0
@@ -109,3 +109,9 @@ voluptuous==0.15.2
 wcwidth==0.2.13
 yarl==1.20.0
 zc.lockfile==3.0.post1
+
+# Cloud-specific additions
+gunicorn==21.2.0
+uvloop==0.19.0; sys_platform != 'win32'
+httptools==0.6.1; sys_platform != 'win32'
+python-multipart==0.0.9
