--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-# Core dependencies
+--index-url https://pypi.org/simple/
+--trusted-host pypi.org
+--trusted-host pypi.python.org
+--trusted-host files.pythonhosted.org
+
 aiohappyeyeballs==2.6.1
 aiohttp==3.9.5
 aiohttp-retry==2.9.1
@@ -109,8 +113,6 @@ voluptuous==0.15.2
 wcwidth==0.2.13
 yarl==1.20.0
 zc.lockfile==3.0.post1
-
-# Cloud-specific additions
 gunicorn==21.2.0
 uvloop==0.19.0; sys_platform != 'win32'
 httptools==0.6.1; sys_platform != 'win32'
